# music-prompt-generator

./: .gitignore  README.md  ROADMAP.md  cloudbuild.yaml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  analyzer.py  clap_analyzer.py  llm_generator.py  main.py  pyproject.toml  translator.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
