[project]
name = "music-prompt-generator"
version = "2.0.0"
description = "音訊分析工具，生成 SUNO AI 風格提示詞 (支援 CLAP)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "librosa>=0.10.1",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "gunicorn>=21.0.0",
    # CLAP dependencies
    "transformers>=4.36.0",
    "torch>=2.0.0",
    # LLM dependencies
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[tool.uv]
package = false
